--- a/flappy.html
+++ b/flappy.html
@@ -13,11 +13,11 @@
     <div wm-flappy>
         <img class="passaro" src="./imgs/passaro.png" alt="passaro">
         <div class="par-de-barreiras">
-            <div class="barreiras">
+            <div class="barreira">
                 <div class="corpo"></div>
                 <div class="borda"></div>
             </div>
-            <div class="barreiras">
+            <div class="barreira">
                 <div class="borda"></div>
                 <div class="corpo"></div>
             </div>
