--- a/flappy.html
+++ b/flappy.html
@@ -11,7 +11,7 @@
 <body class="conteudo">
     <h1>Flappy Bird</h1>
     <div wm-flappy></div>
-    <script src="js/flappy.js"></script>
+    <script src="./js/flappy.js"></script>
 </body>
 
 </html>
